<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2022  Wrichik Basu (basulabs.developer@gmail.com)

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published
by the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Audio Focus Controller Demo</string>

    <string name="usageLabel">Usage:</string>
    <string name="contentTypeLabel">Content type:</string>
    <string name="streamTypeLabel">Stream type:</string>
    <string name="DurationHintLabel">Duration hint:</string>
    <string name="currentStatus">Current status:</string>

    <string name="delayedFocusCheckBoxLabel">Accept delayed focus</string>
    <string name="pauseDuckCheckBoxLabel">Pause when ducked</string>
    <string name="audioNoisyCheckBoxLabel">Listen to Audio becoming noisy broadcast</string>

    <string name="requestFocus">Request audio focus</string>
    <string name="abandonFocus">Abandon audio focus</string>

    <string name="editingSwitchOnLabel">Editing ON\n<small>Restrict editing to request focus.</small></string>
    <string name="editingSwitchOffLabel">Editing OFF\n<small>Focus will automatically be abandoned once turned on.</small></string>



</resources>
